--- a/index.html
+++ b/index.html
@@ -7,7 +7,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="index.js"></script>
+    <!-- add echarts -->
+    <script src="echarts.min.js"></script>
 </head>
 <body>
+    <!-- echarts dom -->
+    <div id="covid_daily" style="width: 600px;height:400px;"></div>
+    <script type="text/javascript">
+        // 基于准备好的dom，初始化echarts实例
+        var covidDaily = echarts.init(document.getElementById('covid_daily'));
+
+        // 指定图表的配置项和数据
+        var option = {
+            title: {
+                text: '每日省外新增，病死，重症'
+            },
+            tooltip: {},
+            legend: {
+                data:['新增']
+            },
+            xAxis: {
+                data: [
+                    "01-20","01-21","01-22","01-23","01-24","01-25","01-26",
+                    "01-27","01-28","01-29","01-30","01-31","02-01","02-02",
+                    "02-03","02-04","02-05","02-06","02-07","02-08","02-09",
+                    "02-10","02-11","02-12","02-13","02-14","02-15","02-16",
+                    "02-17","02-18"
+                ]
+            },
+            yAxis: {},
+            series: [
+                {
+                    name: '新增',
+                    type: 'bar',
+                    data: [
+                        5, 44, 62, 154, 264, 365, 398,
+                        480, 619, 705, 762, 755, 669, 726,
+                        896, 731, 707, 696, 558, 509, 444,
+                        381, 377, 312, 267, 221, 166, 115,
+                        79, 56
+                    ]
+                },
+                {
+                    name: '重症',
+                    type: 'bar',
+                    data: [
+                        5, 44, 62, 154, 264, 365, 398,
+                        480, 619, 705, 762, 755, 669, 726,
+                        896, 731, 707, 696, 558, 509, 444,
+                        381, 377, 312, 267, 221, 166, 115,
+                        79, 56
+                    ]
+                },
+                {
+                    name: '病死',
+                    type: 'bar',
+                    data: [
+                        5, 44, 62, 154, 264, 365, 398,
+                        480, 619, 705, 762, 755, 669, 726,
+                        896, 731, 707, 696, 558, 509, 444,
+                        381, 377, 312, 267, 221, 166, 115,
+                        79, 4
+                    ]
+                }
+            ]
+        };
+
+        // 使用刚指定的配置项和数据显示图表。
+        covidDaily.setOption(option);
+    </script>
 </body>
 </html>
