update daily increased dead cases

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         // 指定图表的配置项和数据
         var option = {
             title: {
-                text: '每日省外新增，病死，重症'
+                text: '每日省外新增确诊，新增病死'
             },
             tooltip: {},
             legend: {
-                data:['新增']
+                data:['新增确诊', '新增病死']
             },
             xAxis: {
                 data: [
@@ -36,9 +36,23 @@
                 ]
             },
             yAxis: {},
+            dataZoom: [
+                // x axis data slider
+                {   
+                    type: 'slider',
+                    start: 0,
+                    end: 60
+                },
+                // x axis data inside slider
+                {   
+                    type: 'inside', 
+                    start: 0,     
+                    end: 60
+                }
+            ],
             series: [
                 {
-                    name: '新增',
+                    name: '新增确诊',
                     type: 'bar',
                     data: [
                         5, 44, 62, 154, 264, 365, 398,
@@ -49,25 +63,14 @@
                     ]
                 },
                 {
-                    name: '重症',
+                    name: '新增病死',
                     type: 'bar',
                     data: [
-                        5, 44, 62, 154, 264, 365, 398,
-                        480, 619, 705, 762, 755, 669, 726,
-                        896, 731, 707, 696, 558, 509, 444,
-                        381, 377, 312, 267, 221, 166, 115,
-                        79, 56
-                    ]
-                },
-                {
-                    name: '病死',
-                    type: 'bar',
-                    data: [
-                        5, 44, 62, 154, 264, 365, 398,
-                        480, 619, 705, 762, 755, 669, 726,
-                        896, 731, 707, 696, 558, 509, 444,
-                        381, 377, 312, 267, 221, 166, 115,
-                        79, 4
+                        null, 0, 0, 0, 1, 2, 0,
+                        2, 1, 1, 1, 1, 0, 1,
+                        0, 0, 3, 4, 5, 8, 6,
+                        5, 3, 12, 5, 4, 3, 5,
+                        5, 4
                     ]
                 }
             ]
