--- a/index.html
+++ b/index.html
@@ -105,10 +105,7 @@
                 {
                     name: '实际结果',
                     type: 'bar',
-                    data: [
-                        0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1,
-                        0.1, 0.1,
-                    ]
+                    data: histBenford(daily_diag)
                 }
             ]
         };
