--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <!-- echarts dom -->
     <div id="covid_daily" style="width:100%;"></div>
     <div id="benford_law" style="width:100%;"></div>
+    <div id="pain_surgery" style="width:100%;"></div>
     <script type="text/javascript">
         var start_date = new Date(2020, 0, 20);
+        var pain_start_date = new Date(2020, 1, 24);
         var date_list = getDiffDate(start_date, new Date());
+        var pain_date_list = getDiffDate(pain_start_date, new Date());
         var daily_diag = [
             5, 44, 62, 154, 264, 365, 398,
             480, 619, 705, 762, 755, 669, 726,
@@ -33,13 +36,18 @@
             5, 4, 6, 3, 3, 1, 1,
             3
         ];
+        var pain_level = [
+            1, 10
+        ];
         // set charts height automatically
         chartHeight = 0.8 * getWindowHeight();
         document.getElementById("covid_daily").style.height= chartHeight +"px";
         document.getElementById("benford_law").style.height= chartHeight +"px";
+        document.getElementById("pain_surgery").style.height= chartHeight +"px";
         // init echarts
         var covidDaily = echarts.init(document.getElementById('covid_daily'));
         var benfordLaw = echarts.init(document.getElementById('benford_law'));
+        var painDaily = echarts.init(document.getElementById('pain_surgery'));
         // chart data
         var covidOption = {
             title: {
@@ -111,14 +119,37 @@
                 }
             ]
         };
+        var painOption = {
+            title: {
+                text: '自助记录'
+            },
+            tooltip: {},
+            legend: {
+                data:['主观疼痛']
+            },
+            xAxis: {
+                data: pain_date_list
+            },
+            yAxis: {},
+            series: [
+                {
+                    name: '主观疼痛',
+                    type: 'line',
+                    data: pain_level
+                }
+            ]
+        };
         // bind data with echarts
         covidDaily.setOption(covidOption);
         benfordLaw.setOption(benfordOption);
+        painDaily.setOption(painOption);
         window.addEventListener("resize",function(){
             document.getElementById("covid_daily").style.height= chartHeight +"px";
             document.getElementById("benford_law").style.height= chartHeight +"px";
+            document.getElementById("pain_surgery").style.height= chartHeight +"px";
             covidDaily.resize();
             benfordLaw.resize();
+            painDaily.resize();
         });
     </script>
 </body>
