change german data source

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             'de' : {
                 'start_date' : new Date(2020, 1, 25),
                 'name' : '德国',
-                'source' : 'https://en.wikipedia.org/wiki/2020_coronavirus_pandemic_in_Germany',
+                'source' : 'https://interaktiv.morgenpost.de/corona-virus-karte-infektionen-deutschland-weltweit/',
                 'daily_diag' : [
                     2, 3, 5, 27, 13, 51, 33,
                     38, 52, 109, 185, 150, 163, 265,
