add external html page link test

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script src="index.js"></script>
 </head>
 <body>
+    <a href="test.html">
+        <p>goto test</p>
+    </a>
     <script type="text/javascript">
         // must manually set up start date for each country, recorde daily change
         var country_list = {
