reorganize all files

--- a/html/index.html
+++ b/html/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>COVID-19</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css" />
     <!-- add echarts -->
-    <script src="echarts.min.js"></script>
-    <script src="index.js"></script>
+    <script src="../js/echarts.min.js"></script>
+    <script src="../js/index.js"></script>
 </head>
 <body>
     <a href="test.html">
