--- a/html/test.html
+++ b/html/test.html
@@ -6,20 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>COVID-19</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="test.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/test.css" />
     <!-- add vue.js -->
-    <script src="vue.min.js"></script>
+    <script src="../js/vue.min.js"></script>
 </head>
 <body>
     <h1 class="title">Hover over the cards</h1>
     
     <div id="test" class="container">
-        <card data-image="assets/img/me.jpg">
+        <card data-image="../assets/img/me.jpg">
             <h1 slot="header">Canyons</h1>
             <p slot="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </card>
     </div>
 <!-- add test.js -->
-<script src="test.js"></script>
+<script src="../js/test.js"></script>
 </body>
 </html>
