fix a bug: index.html should be located at the root path

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>COVID-19</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <!-- add echarts -->
-    <script src="../js/echarts.min.js"></script>
-    <script src="../js/index.js"></script>
+    <script src="js/echarts.min.js"></script>
+    <script src="js/index.js"></script>
     <!-- add bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -20,13 +20,13 @@
         <nav class="navbar navbar-expand-sm bg-light navbar-light">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="test.html">关于我</a>
+                <a class="nav-link" href="html/test.html">关于我</a>
               </li>
               <!-- Dropdown -->
               <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">小学数学</a>
                   <div class="dropdown-menu">
-                      <a class="dropdown-item" href="pick_a_ball.html">Pick A Ball</a>
+                      <a class="dropdown-item" href="html/pick_a_ball.html">Pick A Ball</a>
                   </div>
                 </li>
             </ul>
