change title of pick_a_ball

--- a/html/pick_a_ball.html
+++ b/html/pick_a_ball.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>COVID-19</title>
+    <title>小学数学可能性——口袋里的彩球</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/pick_a_ball.css" />
     <!-- add bootstrap -->
