add navigation bar to every page; init schulte grid

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                   <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">小学数学</a>
                   <div class="dropdown-menu">
                       <a class="dropdown-item" href="html/pick_a_ball.html">Pick A Ball</a>
+                      <a class="dropdown-item" href="html/schulte_grid.html">Schulte Grid</a>
                   </div>
-                </li>
+              </li>
             </ul>
         </nav>
     </header>
