--- a/html/pick_a_ball.html
+++ b/html/pick_a_ball.html
@@ -14,6 +14,23 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>    
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-sm bg-light navbar-light">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="../html/test.html">关于我</a>
+              </li>
+              <!-- Dropdown -->
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">小学数学</a>
+                  <div class="dropdown-menu">
+                      <a class="dropdown-item" href="../html/pick_a_ball.html">Pick A Ball</a>
+                      <a class="dropdown-item" href="../html/schulte_grid.html">Schulte Grid</a>
+                  </div>
+              </li>
+            </ul>
+        </nav>
+    </header>
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-3">
