--- a/html/schulte_grid.html
+++ b/html/schulte_grid.html
@@ -12,11 +12,17 @@
     <script src="../js/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>    
+    <script src="https://kit.fontawesome.com/5f9d5ec290.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm bg-light navbar-light">
             <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="../index.html">
+                  <i class="fas fa-virus"></i>
+                </a>
+              </li>
               <li class="nav-item active">
                 <a class="nav-link" href="../html/test.html">关于我</a>
               </li>
