--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>COVID-19</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <!-- add fonts -->
+    <script src="js/font.all.min.js"></script>
     <!-- add echarts -->
     <script src="js/echarts.min.js"></script>
     <script src="js/index.js"></script>
@@ -14,7 +16,6 @@
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/5f9d5ec290.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
