--- a/html/schulte_grid.html
+++ b/html/schulte_grid.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../css/schulte_grid.css" />
     <!-- add fonts -->
     <script src="../js/font.all.min.js"></script>
+    <!-- add d3 -->
+    <script src="../js/d3.min.js"></script>
     <!-- add bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="../js/jquery-3.5.1.min.js"></script>
@@ -40,10 +42,11 @@
     </header>
     <div class="container-fluid">
         <div class="row">
+            <div class="col-lg-9 col-md-9 col-sm-9" id="grid"></div>
         </div>
     </div>
 </div>
-<!-- add pick_a_ball.js -->
-<script src="../js/pick_a_ball.js"></script>
+<!-- add schulte_grid.js -->
+<script src="../js/schulte_grid.js"></script>
 </body>
 </html>
