--- a/html/schulte_grid.html
+++ b/html/schulte_grid.html
@@ -16,6 +16,8 @@
     <script src="../js/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>    
+    <script src="../js/bootstrap-slider.min.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/bootstrap-slider.min.css" />
 </head>
 <body>
     <header>
@@ -43,6 +45,24 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-9 col-md-9 col-sm-9" id="grid"></div>
+            <div class="col-lg-3 col-md-3 col-sm-3">
+                <div class="row">
+                    网格大小：
+                </div>
+                <div class="row">
+                    <input
+                        type="text"
+                        id="grid_length_slider"
+                        data-provide="slider"
+                        data-slider-ticks="[2, 10]"
+                        data-slider-ticks-labels='["2", "10"]'
+                        data-slider-min="2"
+                        data-slider-max="10"
+                        data-slider-step="1"
+                        data-slider-value="5"
+                    >                
+                </div>
+            </div>
         </div>
     </div>
 </div>
