--- a/html/schulte_grid.html
+++ b/html/schulte_grid.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,30 +15,31 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="../js/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>    
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="../js/bootstrap-slider.min.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="../css/bootstrap-slider.min.css" />
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-sm bg-light navbar-light">
             <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="../index.html">
-                  <i class="fas fa-virus"></i>
-                </a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="../html/test.html">关于我</a>
-              </li>
-              <!-- Dropdown -->
-              <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">小学数学</a>
-                  <div class="dropdown-menu">
-                      <a class="dropdown-item" href="../html/pick_a_ball.html">Pick A Ball</a>
-                      <a class="dropdown-item" href="../html/schulte_grid.html">Schulte Grid</a>
-                  </div>
-              </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="../index.html">
+                        <i class="fas fa-virus"></i>
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="../html/test.html">关于我</a>
+                </li>
+                <!-- Dropdown -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">小学数学</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="../html/pick_a_ball.html">Pick A Ball</a>
+                        <a class="dropdown-item" href="../html/schulte_grid.html">Schulte Grid</a>
+                    </div>
+                </li>
             </ul>
         </nav>
     </header>
@@ -47,26 +48,29 @@
             <div class="col-lg-9 col-md-9 col-sm-9" id="grid"></div>
             <div class="col-lg-3 col-md-3 col-sm-3">
                 <div class="row">
-                    网格大小：
+                    <i class="fas fa-border-all fa-2x grid_size_icon"> </i>
+                    <input type="text" id="grid_length_slider" data-provide="slider" data-slider-ticks="[2, 10]" data-slider-ticks-labels='["2", "10"]' data-slider-min="2" data-slider-max="10" data-slider-step="1" data-slider-value="5">
                 </div>
                 <div class="row">
-                    <input
-                        type="text"
-                        id="grid_length_slider"
-                        data-provide="slider"
-                        data-slider-ticks="[2, 10]"
-                        data-slider-ticks-labels='["2", "10"]'
-                        data-slider-min="2"
-                        data-slider-max="10"
-                        data-slider-step="1"
-                        data-slider-value="5"
-                    >                
+
+                </div>
+                <div class="row">
+                    <div class="stopwatch">
+                        <div class="circle">
+                            <span class="time" id="display">00:00:00</span>
+                        </div>
+                        <button class="buttonPlay">
+                            <span id="playButton" ><i class="fas fa-play fa-2x"> </i></span>
+                            <span id="pauseButton"><i class="fas fa-pause fa-2x"> </i></span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- add schulte_grid.js -->
-<script src="../js/schulte_grid.js"></script>
+    </div>
+    <!-- add schulte_grid.js -->
+    <script src="../js/schulte_grid.js"></script>
 </body>
+
 </html>
