add record table

--- a/html/schulte_grid.html
+++ b/html/schulte_grid.html
@@ -65,6 +65,30 @@
                         </button>
                     </div>
                 </div>
+                <div>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">历史成绩</th>
+                                <th scope="col">时间</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">最佳</th>
+                                <td id="best_record">00:00:00</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">本次</th>
+                                <td id="this_record">00:00:00</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">上次</th>
+                                <td id="last_record">00:00:00</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
